# polars-io-tools

./: .copier-answers.yaml  .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml
docs/wiki/: API-Reference.md  Concepts.md  Distributed-Execution.md  Getting-Started.md  Home.md  Installation.md  Query-Optimization.md  Reading-and-Writing-Data.md  _Footer.md  _Sidebar.md
docs/wiki/contribute/: Build-from-Source.md  Contribute.md  Local-Development-Setup.md
polars_io_tools/: __init__.py  _compat.py
polars_io_tools/io_sources/: __init__.py  base.py  concat_named.py  delta_io.py  dnf_visitor.py  enum.py  join.py  lazy_cache.py  lazy_cache_parquet.py  lazy_clickhouse_reader.py  lazy_clickhouse_writer.py  lazy_datadog_reader.py  lazy_debug.py  lazy_iter_rows.py  lazy_narwhals_reader.py  lazy_ray.py  lazy_sql_reader.py  multi_source.py  range_visitor.py  restrict_visitor.py  set_visitor.py  sql_dialects.py  sql_utils.py  translated_source.py  ts.py  util.py
polars_io_tools/testing/: __init__.py  predicate_tracker.py
polars_io_tools/tests/: __init__.py  conftest.py  test_doctests.py  test_testing_utils.py
polars_io_tools/tests/helpers/: cache_parquet_shared.py
polars_io_tools/tests/integration/: README.md  conftest.py  test_clickhouse_reader.py  test_clickhouse_writer.py  test_s3_cache_parquet.py  test_s3_delta_io.py  test_sql_reader.py
rust/: Cargo.toml
rust/python/: lib.rs
rust/python/example/: mod.rs
(+42 files in other folders)
